--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
-.idea
+box/.idea/*
 box/a.out
 box/cmake-build-debug
 box/CMakeLists.txt
 box/Makefile
+btree/.idea
 btree/a.out
 btree/cmake-build-debug
 btree/CMakeLists.txt
 btree/Makefile
+mergesort/.idea
 mergesort/a.out
 mergesort/cmake-build-debug
 mergesort/CMakeLists.txt
 mergesort/Makefile
+quene/.idea
 quene/a.out
 quene/cmake-build-debug
 quene/CMakeLists.txt
